--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "daily-bible",
+  "name": "discord-bots",
   "version": "1.0.0",
-  "description": "Daily Bible verse bot using Google Gemini API and Discord",
-  "main": "fetch_and_post.js",
+  "description": "Collection of Discord bots including daily bible verses and Japanese words",
+  "type": "module",
   "scripts": {
-    "start": "node fetch_and_post.js",
-    "japanese-word": "node japanese_word_bot.js"
+    "start:bible": "node fetch_and_post.js",
+    "start:japanese": "node japanese_word_bot.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
-    "node-fetch": "^2.6.7"
-  },
-  "type": "module"
+    "node-fetch": "^3.3.2"
+  }
 } 
