--- a/.github/workflows/daily-bible.yml
+++ b/.github/workflows/daily-bible.yml
@@ -24,4 +24,4 @@ jobs:
       env:
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-      run: npm start 
+      run: npm run start:bible 
