--- a/.github/workflows/japanese-word-bot-arab.yml
+++ b/.github/workflows/japanese-word-bot-arab.yml
@@ -28,4 +28,4 @@ jobs:
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           JAPANESE_BOT_DISCORD_WEBHOOK: ${{ secrets.JAPANESE_ARAB_BOT_DISCORD_WEBHOOK }}
-        run: npm run start:japanese 
+        run: npm run start:japanese_arabic
